# Games101

./: README.md
Assignment1/: readme.md
Assignment1/代码框架/: CMakeLists.txt  main.cpp
Assignment2/代码框架/: main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/: readme.md
Assignment3/Code/: Texture.cpp  Texture.hpp  main.cpp  rasterizer.cpp
Assignment5/Code/: CMakeLists.txt  Renderer.cpp  Scene.cpp  Triangle.hpp
Assignment6/Assignment6/: BVH.cpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Renderer.cpp  Triangle.hpp
Hw4/code/: main.cpp
